--- a/Usage.ipynb
+++ b/Usage.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,27 +56,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3/0,0.6/1,1.0/2,0.5/3,0.2/4\n"
+      "Age_parsed = {0.3/0,0.6/1,1.0/2,0.5/3,0.2/4}\n"
      ]
     }
    ],
    "source": [
     "age_fuzzy = Fuzzy.parse_from(underlying_set, \"0.3/0,0.6/1,1.0/2,0.5/3,0.2/4\", \"Age_parsed\")\n",
-    "print(age_fuzzy.set_repr)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(上記の通り、プロパティ `Fuzzy.set_repr` により *集合1*形式でフォーマットされたファジィ集合を得ることができます.)"
+    "print(age_fuzzy.formula_repr)"
    ]
   },
   {
@@ -95,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
